fix: excessive screen brightness when pixels not visible

--- a/flybywire-aircraft-a320-neo/html_ui/CSS/A32NX_Display_Common.css
+++ b/flybywire-aircraft-a320-neo/html_ui/CSS/A32NX_Display_Common.css
@@ -65,6 +65,16 @@ text {
   */
 }
 
+#BrightnessCompensation {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.35);
+  transition: opacity 0.5s;
+}
+
 /* Backlight Bleed*/
 #BacklightBleed {
   content: '';
